--- a/modal-product-card-check2.html
+++ b/modal-product-card-check2.html
@@ -642,7 +642,7 @@
 
 
     <div class="w-full mx-auto mt-[30px] mb-[30px]">
-      <div class="flex gap-2 max-[767px]:overflow-x-auto overflow-x-auto custom-scrollbar">
+      <div class="flex gap-2 max-[520px]:overflow-x-auto overflow-x-auto custom-scrollbar">
         <button
             class="whitespace-nowrap tab-btn rounded-full px-5 py-2 text-sm transition-all"
             data-tab="tab1"
@@ -690,7 +690,7 @@
           <a href="#" class="text-[#009FFF] text-sm font-medium border-b-[1px] border-[#009FFF]">Читать далее</a>
         </div>
         <div class="tab-content hidden" id="tab2">
-          <div class="grid grid-cols-2 gap-[30px] max-[767px]:grid-cols-1">
+          <div class="grid grid-cols-2 gap-[30px] max-[520px]:grid-cols-1">
             <ul>
               <li class="flex flex-js mb-[8px]">
                 <span class="text-[#323232]">Вид ловли:</span>
@@ -786,8 +786,8 @@
             публикации сведениях</p>
         </div>
         <div class="tab-content hidden" id="tab3">
-          <div class="flex max-[767px]:flex-col">
-            <img src="img/jaxon.png" alt="" class="mr-[45px] self-start max-[767px]:mb-[20px]">
+          <div class="flex max-[520px]:flex-col">
+            <img src="img/jaxon.png" alt="" class="mr-[45px] self-start max-[520px]:mb-[20px]">
             <div class="">
               <p class="text-[#323232] mb-[15px]">Спиннинг телескопический Jaxon Tenesa Tele Travel — это универсальное
                 удилище, идеально подходящее для рыболовов, ценящих компактность и
@@ -818,7 +818,7 @@
           </div>
         </div>
         <div class="tab-content hidden" id="tab4">
-          <div class="p-[24px] max-[767px]:p-[16px] mb-[12px] rounded-[24px] border border-[rgba(33,33,33,0.2)]">
+          <div class="p-[24px] max-[520px]:p-[16px] mb-[12px] rounded-[24px] border border-[rgba(33,33,33,0.2)]">
             <div class="flex flex-jcc">
               <span class="text-[16px] font-semibold text-[#323232] mr-[8px]">Александр</span>
               <span class="text-[14px] mr-[8px]">7 мая 2024</span>
@@ -831,7 +831,7 @@
               <img src="img/star.svg" alt="" class="mr-[5px]">
               <span class="text-[#323232] mt-[3px]">5</span>
             </div>
-            <p class="text-[18px] text-[#323232] max-[767px]:text-[15px]">
+            <p class="text-[18px] text-[#323232] max-[520px]:text-[15px]">
               Спиннинг телескопический Jaxon Tenesa Tele Travel — это универсальное
               удилище, идеально подходящее для рыболовов, ценящих компактность и удобство
               в транспортировке. Благодаря своей телескопической конструкции, данная
@@ -852,7 +852,7 @@
               <img src="img/star-grey.svg" alt="" class="mr-[5px]">
               <span class="text-[#323232] mt-[3px]">3</span>
             </div>
-            <p class="text-[18px] text-[#323232] max-[767px]:text-[15px]">
+            <p class="text-[18px] text-[#323232] max-[520px]:text-[15px]">
               Спиннинг телескопический Jaxon Tenesa Tele Travel — это универсальное
               удилище, идеально подходящее для рыболовов, ценящих компактность и удобство
               в транспортировке. Благодаря своей телескопической конструкции, данная
@@ -878,7 +878,7 @@
               <img src="img/star.svg" alt="" class="mr-[5px]">
               <span class="text-[#323232] mt-[3px]">5</span>
             </div>
-            <p class="text-[18px] text-[#323232] max-[767px]:text-[15px]">
+            <p class="text-[18px] text-[#323232] max-[520px]:text-[15px]">
               Спиннинг телескопический Jaxon Tenesa Tele Travel — это универсальное
               удилище, идеально подходящее для рыболовов, ценящих компактность и удобство
               в транспортировке. Благодаря своей телескопической конструкции, данная
@@ -894,41 +894,11 @@
           <button class="flex py-[16px] px-[24px] mt-[30px] text-[#212121]
                 rounded-[8px] border-2 border-[#009FFF] hover:bg-[#009FFF] transition hover:text-[#fff]">Показать еще
           </button>
-          <div class="border-t border-t-[rgba(33,33,33,0.25)] pt-[30px] mt-[30px]">
-            <h3 class="text-[#212121] font-medium text-[32px] mb-[10px]">Оставить отзыв</h3>
-            <span class="text-[#212121] block text-[18px] mb-[16px]">Заполните форму и оставьте свой честный отзыв</span>
-            <div class="flex items-center mb-[16px]">
-              <span class="text-[#212121] text-[16px] mr-[10px]">Ваша оценка</span>
-              <div class="flex gap-[2px]">
-                <img src="img/star.svg" alt="">
-                <img src="img/star.svg" alt="">
-                <img src="img/star-grey.svg" alt="">
-                <img src="img/star-grey.svg" alt="">
-                <img src="img/star-grey.svg" alt="">
-              </div>
-            </div>
-            <form class="max-w-[760px] w-full">
-              <div class="grid grid-cols-2 gap-[20px] mb-[20px]">
-                <input type="text" placeholder="Ваше имя" class="h-[54px] rounded-[8px] border border-[rgba(110,110,110,0.25)] px-[20px] text-[#323232]">
-                <input type="tel" placeholder="+7 000 000 000" class="h-[54px] rounded-[8px] border border-[rgba(110,110,110,0.25)] px-[20px] text-[#323232]">
-              </div>
-              <textarea placeholder="Ваш отзыв" class="w-full h-[160px] resize-none rounded-[8px] border border-[rgba(110,110,110,0.25)] p-[20px] text-[#323232]"></textarea>
-              <div class="flex items-center max-[767px]:flex-col max-[767px]:items-start">
-                <button class="flex py-[16px] px-[24px] font-bold text-[#fff]
-                rounded-[8px] border-2 border-[#CF301B] bg-[#CF301B] hover:bg-[#CF301B] transition hover:text-[#fff] max-[767px]:justify-center
-                mr-[20px] max-[767px]:mr-[0] max-[767px]:mb-[12px] max-[767px]:w-full max-[767px]:text-center max-[767px]:mt-[12px]">
-                Отправить
-                </button>
-                <span class="text-[14px] text-[rgba(50,50,50,0.75)] max-w-[400px] w-full leading-[110%]">Нажимая кнопку «Отправить» вы принимаете 
-                  <a href="#">политику конфендициальности</a> и даете согласие на обработку выших персональных данных</span>
-              </div>
-            </form>
-          </div>
         </div>
       </div>
     </div>
 
-  <!-- <div class="w-full h-auto mt-[70px] mb-[60px]">
+  <div class="w-full h-auto mt-[70px] mb-[60px]">
 
     <div class="w-full flex-jsb-c mb-6">
       <div class="flex-js-c gap-4">
@@ -1385,7 +1355,7 @@
 
   <div class="w-full mb-[70px]">
     <div class="w-full flex-jsb-c mb-[25px]">
-      <h4 class="font-medium text-[32px] text-[#212121] max-[767px]:text-[25px]">Популярные выды рыбалки</h4>
+      <h4 class="font-medium text-[32px] text-[#212121] max-[520px]:text-[25px]">Популярные выды рыбалки</h4>
       <div class="popular-navigation flex-je-c relative gap-2">
         <div class="swiper-button-prev after:text-[20px] after:text-black after:content-['prev']
         w-[42px] h-[42px] rounded-[8px] transition border border-[#6E6E6E]/25 static hover:border-black"></div>
@@ -1396,50 +1366,50 @@
     <div class="swiper popularSwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px] max-[520px]:h-[290px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img1.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena ">Ультралайт</span>
+              <span class="absolute text-white text-[40px] max-[520px]:text-[24px] z-10 font-lena ">Ультралайт</span>
             </div>
           </a>
         </div>
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px] max-[520px]:h-[290px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img2.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">На джиг</span>
+              <span class="absolute text-white text-[40px] max-[520px]:text-[24px] z-10 font-lena">На джиг</span>
             </div>
           </a>
         </div>
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px] max-[520px]:h-[290px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img3.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">Троллинг</span>
+              <span class="absolute text-white text-[40px] max-[520px]:text-[24px] z-10 font-lena">Троллинг</span>
             </div>
           </a>
         </div>
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px] max-[520px]:h-[290px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img4.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">На поплавок</span>
+              <span class="absolute text-white text-[40px] max-[520px]:text-[24px] z-10 font-lena">На поплавок</span>
             </div>
           </a>
         </div>
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px] max-[520px]:h-[290px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img5.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">Фидер</span>
+              <span class="absolute text-white text-[40px] max-[520px]:text-[24px] z-10 font-lena">Фидер</span>
             </div>
           </a>
         </div>
         <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+          <a href="#" class="w-full group h-[378px] max-[520px]:h-[290px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img1.png" alt="" class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">Фидер</span>
+              <span class="absolute text-white text-[40px] max-[520px]:text-[24px] z-10 font-lena">Фидер</span>
             </div>
           </a>
         </div>
@@ -1901,7 +1871,7 @@
     rounded-[8px] border-2 border-[#009FFF] hover:bg-[#009FFF] transition hover:text-[#fff]">Посмотреть все
     </button>
 
-  </div> -->
+  </div>
 
 </div>
 
@@ -2212,6 +2182,116 @@
   </div>
 
 </footer>
+
+
+
+<div class="w-full h-[100dvh]  flex-jc-c fixed top-0 left-0 bg-black/60 z-10 p-4">
+    <div class="bg-white rounded-2xl p-6 w-full max-w-[500px] relative ">
+        <button class="absolute top-4 right-4">
+            <img src="img/icons/xmark.svg" alt="Փակել">
+        </button>
+        <h3 class="text-[#212121] text-[32px] leading-[100%] font-medium
+        mb-[10px] max-[520px]:text-[24px]">Какой сплит подойдет?</h3>
+        <b class="flex items-center mb-[20px] text-[rgba(33,33,33,0.5)] text-[32px] font-semibold max-[520px]:text-[24px]">
+            <img src="img/basket-icon.svg" alt="" class="mr-[10px] max-[520px]:w-[30px] max-[520px]:mr-[6px]"> 5 200 ₽
+        </b>
+        <div class="rounded-[8px] border border-[#6E6E6E] p-[24px] mb-[12px] max-[520px]:p-[16px]">
+            <div class="flex justify-between items-center">
+                <b class="text-[32px] text-[#212121] font-medium max-[520px]:text-[22px]">На 2 месяца</b>
+                <div class="">
+                    <b class="text-[24px] block leading-[100%] mb-[2px] text-[#323232] max-[520px]:text-[18px]">4 х 2500 ₽</b>
+                    <span class="text-[16px] text-[#707070]">Без переплаты</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-4 gap-[10px] pt-[20px]">
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">Сегодня</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#009FFF] rounded-[20px] mt-[8px]"></span>
+                </div>
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">19 июня</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#D9D9D9] rounded-[20px] mt-[8px]"></span>
+                </div>
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">3 июля</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#D9D9D9] rounded-[20px] mt-[8px]"></span>
+                </div>
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">17 июля</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#D9D9D9] rounded-[20px] mt-[8px]"></span>
+                </div>
+            </div>
+        </div>
+        <div class="rounded-[8px] border border-[rgba(110,110,110,0.25)] p-[24px] mb-[12px] max-[520px]:p-[16px]">
+            <div class="flex justify-between items-center">
+                <b class="text-[32px] text-[#212121] font-medium max-[520px]:text-[18px]">На 6 месяцев</b>
+                <div class="">
+                    <b class="text-[24px] block leading-[100%] mb-[2px] text-[#323232] max-[520px]:text-[18px]">4 х 2500 ₽</b>
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">Переплата 474₽/мec</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-4 gap-[10px] pt-[20px] hidden">
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">Сегодня</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#009FFF] rounded-[20px] mt-[8px]"></span>
+                </div>
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">19 июня</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#D9D9D9] rounded-[20px] mt-[8px]"></span>
+                </div>
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">3 июля</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#D9D9D9] rounded-[20px] mt-[8px]"></span>
+                </div>
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">17 июля</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#D9D9D9] rounded-[20px] mt-[8px]"></span>
+                </div>
+            </div>
+        </div>
+        <div class="rounded-[8px] border border-[rgba(110,110,110,0.25)] p-[24px] mb-[12px] max-[520px]:p-[16px]">
+            <div class="flex justify-between items-center">
+                <b class="text-[32px] text-[#212121] font-medium max-[520px]:text-[22px]">На 4 месяца</b>
+                <div class="">
+                    <b class="text-[24px] block leading-[100%] mb-[2px] text-[#323232] max-[520px]:text-[18px]">4 х 2500 ₽</b>
+                    <span class="text-[16px] text-[#707070]">Без переплаты</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-4 gap-[10px] pt-[20px] hidden">
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">Сегодня</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#009FFF] rounded-[20px] mt-[8px]"></span>
+                </div>
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">19 июня</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#D9D9D9] rounded-[20px] mt-[8px]"></span>
+                </div>
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">3 июля</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#D9D9D9] rounded-[20px] mt-[8px]"></span>
+                </div>
+                <div class="">
+                    <span class="text-[16px] text-[#707070] max-[520px]:text-[14px]">17 июля</span>
+                    <b class="text-[18px] leading-[100%] font-semibold text-[#323232]">2500</b>
+                    <span class="w-full flex h-[6px] bg-[#D9D9D9] rounded-[20px] mt-[8px]"></span>
+                </div>
+            </div>
+        </div>
+        <button class="bg-[#FCE001] w-full text-[16px] font-bold text-[#212121] rounded-[8px]
+        py-[12px] px-[24px] mt-[20px]">К оформлению</button>
+    </div>
+</div>
 
 
 <script src="js/script.js"></script>
